--- a/packages/package-a/package.json
+++ b/packages/package-a/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
