--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:a": "pnpm dev --filer package-a",
-    "dev:b": "pnpm dev --filer package-b",
-    "dev:c": "pnpm dev --filer package-c"
+    "dev:a": "pnpm run dev --filer package-a",
+    "dev:b": "pnpm run dev --filer package-b",
+    "dev:c": "pnpm run dev --filer package-c",
+    "build:all":"pnpm run build -r"
   },
   "repository": {
     "type": "git",
