chore: add changeset

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:a": "pnpm run dev --filer package-a",
     "dev:b": "pnpm run dev --filer package-b",
     "dev:c": "pnpm run dev --filer package-c",
-    "build:all":"pnpm run build -r"
+    "build:all": "pnpm run build -r"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/ChelesteWang/learn-monorepo/issues"
   },
-  "homepage": "https://github.com/ChelesteWang/learn-monorepo#readme"
+  "homepage": "https://github.com/ChelesteWang/learn-monorepo#readme",
+  "devDependencies": {
+    "@changesets/cli": "^2.20.0"
+  }
 }
