feat: add scope and publishConfig

--- a/packages/package-a/package.json
+++ b/packages/package-a/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "package-a",
-  "version": "1.0.0",
+  "name": "@yuqing521/package-a",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,5 +10,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "publishConfig": {
+    "access": "public"
+  }
 }
