--- a/packages/package-c/package.json
+++ b/packages/package-c/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "package-c",
+  "name": "@yuqing521/package-c",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,5 +10,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "publishConfig": {
+    "access": "public"
+  }
 }
