--- a/packages/package-a/package.json
+++ b/packages/package-a/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@yuqing521/package-a",
   "version": "1.0.2",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js",
+    "dev": "node index.ts",
     "build": "tsc"
   },
   "keywords": [],
